# DocuGen

./: .gitignore  README.md  SETUP_COMPLETE.md  TROUBLESHOOTING.md  setup.bat  setup.sh
client/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx
contract-lifecycle-management/: COMPARISON.md  README.md  TESTING_GUIDE.md  TODO.md  clm-approaches.md  licensing-stack.md  open-source-stack.md  requirements-aspose.txt  requirements.txt  start-dev.sh
contract-lifecycle-management/frontend/: index.html  package-lock.json  package.json  vite.config.ts
contract-lifecycle-management/scripts/: clean_template_fields.py  generate_contract_api.py  generate_contract_aspose.py  generate_contract_open_source.py  generate_s1_customer_info_open_source.py  generate_s2_sites_info_open_source.py  generate_s3_efl_info_open_source.py  generate_s4_nrg_terms_open_source.py  generate_s5_customer_rights_open_source.py  merge_sections.py  test_auto_cleaning.py  validate_templates.py
contract-lifecycle-management/server/: app.py
server/: .flake8  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  run.py  start_server.bat  start_server.sh
server/app/: main.py  server.py
server/app/api/: dependencies.py
server/app/api/v1/: router.py
server/app/api/v1/endpoints/: example.py
server/app/core/: config.py
server/app/db/: session.py
server/app/repositories/: example.py
server/app/schemas/: example.py
server/app/services/: example.py
server/tests/api/: test_example.py
(+30 files in other folders)
