[tool.poetry]
name = "docugen-server"
version = "0.1.0"
description = "DocuGen FastAPI Backend with Poetry"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.0"
uvicorn = { extras = ["standard"], version = ">=0.34.0" }
pydantic = ">=2.10.0"
pydantic-settings = ">=2.7.0"
sqlalchemy = ">=2.0.36"
alembic = ">=1.14.0"
python-dotenv = ">=1.0.1"
python-multipart = ">=0.0.20"
python-jose = { extras = ["cryptography"], version = ">=3.3.0" }
passlib = { extras = ["bcrypt"], version = ">=1.7.4" }
email-validator = ">=2.2.0"
httpx = ">=0.28.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.3.0"
pytest-asyncio = ">=0.24.0"
pytest-cov = ">=4.1.0"
flake8 = ">=7.1.0"
black = ">=24.4.2"
pre-commit = ">=3.7.1"

[tool.black]
line-length = 120
target-version = ['py311']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | \.pytest_cache
  | __pycache__
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
addopts = "-v --cov=app --cov-report=html --cov-report=term-missing"

# Custom scripts would go here, but we're using package-mode = false
# Run with: poetry run uvicorn app.main:app --reload

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
